--- a/eco-drainage_app/adminDashboard.css
+++ b/eco-drainage_app/adminDashboard.css
@@ -101,9 +101,10 @@ body {
 
 .content-row {
     display: grid;
-    grid-template-columns: 2.4fr 1fr;
+    grid-template-columns: 1fr;
     gap: 20px;
     align-items: stretch;
+    margin-top: 10px;
 }
 
 .map-panel {
@@ -130,13 +131,18 @@ body {
     border-radius: 10px;
     border: 1px solid #ddd;
     background-color: #f9f9f9;
+    
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;     
+    align-items: center;       
+    justify-content: center;   
+    text-align: center;         
+    
     padding: 8px;
-    font-size: 14px;
-    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
 }
+
 
 .side-panel {
     background-color: #ffffff;
@@ -248,6 +254,31 @@ body {
     color: #222;
 }
 
+.badge-severe {
+    background-color: #ffcccc; 
+    color: #b30000;           
+    padding: 4px 10px;
+    border-radius: 12px;
+    font-weight: 600;
+}
+
+.badge-moderate {
+    background-color: #ffe5b3;
+    color: #8a4b00;         
+    padding: 4px 10px;
+    border-radius: 12px;
+    font-weight: 600;
+}
+
+.badge-minor {
+    background-color: #cfe6ff; 
+    color: #004b8b;           
+    padding: 4px 10px;
+    border-radius: 12px;
+    font-weight: 600;
+}
+
+
 .badge-admin {
     background-color: #ffd9d9;
     color: #a73a3a;
@@ -320,4 +351,19 @@ body {
         grid-template-columns: 1fr;
         row-gap: 4px;
     }
+}
+
+.action-view-btn {
+    background: #ffffff;
+    border: 1px solid #ddd;
+    padding: 6px 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 18px;
+    transition: 0.2s;
+}
+
+.action-view-btn:hover {
+    background: #f2f2f2;
+    transform: scale(1.08);
 }
